@@ -5,3 +5,6 @@ Logiciel d'envoie de fichiers média sur tous les protocols connus.
 Dépendances : args4j, guava, littleframe, mvc, protocol, serverdruzy, upnpdruzy, utils
 
 Construction : utilisez ant sans argument.
+
+Paramétrage : 
+Pour utiliser JMita2, il faut ouvrir les ports 1900, 18040, 18041 et 18042 pour l'upnp ; les ports 5353 pour la chromecast et l'airplay
