@@ -1,3 +1,10 @@
+jmita version 0.7.7 :
+Taille maximal de la fenetre fixée.
+Ajout de l'image de la télécommande
+
+jmita version 0.7.6 :
+bug fix : Correction de la location du clique droit
+
 jmita version 0.7.5 :
 bug fix : problème avec les arguments à espace
 
